--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
+  "name": "mi-tienda-entrega-1",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "express-handlebars": "^8.0.1",
-    "mongoose": "^8.13.0",
-    "mongoose-paginate-v2": "^1.9.0",
-    "socket.io": "^4.8.1",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.4.5",
-    "cookie-parser": "^1.4.6"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.0"
   }
 }
