--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=Aodrag22!
 MONGODB_URI="mongodb+srv://eze:123@ecommerceuser.aw1dlcm.mongodb.net/back2"
 PORT=8080
+EMAIL_USER = esaranitidev@gmail.com
+EMAIL_PASS = zobe czqr uciw sndr
