--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://eze:123@ecommerceuser.aw1dlcm.mongodb.net/back2"
 PORT=8080
 EMAIL_USER = esaranitidev@gmail.com
 EMAIL_PASS = zobe czqr uciw sndr
+FRONTEND_URL = http://localhost:8080
